# muliticast-based-allgather

./: .gitmodules  README.md  build.sh  sourceme.sh
coll-offloading/: README.md  meson.build
coll-offloading/benchmarking/: bmark.py
coll-offloading/dev/: dpa_profile.h  flexio_ag_bench_dev.c  meson.build
coll-offloading/host/: dpa_transport.cpp  dpa_transport.hpp  flexio_ag_bench.cpp  flexio_ag_bench_com.hpp  ibv_transport.cpp  ibv_transport.hpp  meson.build  transport.hpp  transport_def.hpp  utils.hpp
coll-offloading/infra/: kill_all.sh  meson1.build  meson2.build  run_daemon.sh
osu-micro-benchmarks-7.3/: .clang-format  CHANGES  Makefile  README  config.status  configure  configure.ac  libtool
osu-micro-benchmarks-7.3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
osu-micro-benchmarks-7.3/c/: Makefile  Makefile.am  Makefile.in
osu-micro-benchmarks-7.3/c/mpi/: Makefile
osu-micro-benchmarks-7.3/c/mpi/collective/: Makefile  Makefile.am  Makefile.in
osu-micro-benchmarks-7.3/c/mpi/collective/blocking/: Makefile  osu_allgather.c  osu_allgatherv.c  osu_allreduce.c  osu_alltoall.c  osu_alltoallv.c  osu_alltoallw.c  osu_barrier.c  osu_bcast.c  osu_gather.c  osu_gatherv.c  osu_reduce.c  osu_reduce_scatter.c  osu_scatter.c  osu_scatterv.c
osu-micro-benchmarks-7.3/c/mpi/collective/blocking/.deps/: osu_allgather.Po  osu_allgatherv.Po  osu_allreduce.Po  osu_alltoall.Po  osu_alltoallv.Po  osu_alltoallw.Po  osu_barrier.Po  osu_bcast.Po  osu_gather.Po  osu_gatherv.Po  osu_reduce.Po  osu_reduce_scatter.Po  osu_scatter.Po  osu_scatterv.Po
osu-micro-benchmarks-7.3/c/mpi/collective/neighborhood/: Makefile  osu_ineighbor_allgather.c  osu_ineighbor_allgatherv.c  osu_ineighbor_alltoall.c  osu_ineighbor_alltoallv.c  osu_ineighbor_alltoallw.c  osu_neighbor_allgather.c  osu_neighbor_allgatherv.c  osu_neighbor_alltoall.c  osu_neighbor_alltoallv.c  osu_neighbor_alltoallw.c
osu-micro-benchmarks-7.3/c/mpi/collective/neighborhood/.deps/: osu_ineighbor_allgather.Po  osu_ineighbor_allgatherv.Po  osu_ineighbor_alltoall.Po  osu_ineighbor_alltoallv.Po  osu_ineighbor_alltoallw.Po  osu_neighbor_allgather.Po  osu_neighbor_allgatherv.Po  osu_neighbor_alltoall.Po  osu_neighbor_alltoallv.Po  osu_neighbor_alltoallw.Po
osu-micro-benchmarks-7.3/c/mpi/collective/non_blocking/: Makefile  osu_iallgather.c  osu_iallgatherv.c  osu_iallreduce.c  osu_ialltoall.c  osu_ialltoallv.c  osu_ialltoallw.c  osu_ibarrier.c  osu_ibcast.c  osu_igather.c  osu_igatherv.c  osu_ireduce.c  osu_ireduce_scatter.c  osu_iscatter.c  osu_iscatterv.c
osu-micro-benchmarks-7.3/c/mpi/collective/non_blocking/.deps/: osu_iallgather.Po  (+13 more)
osu-micro-benchmarks-7.3/c/mpi/collective/persistent/: Makefile  Makefile.am  Makefile.in  osu_allgather_persistent.c  osu_allgatherv_persistent.c  osu_allreduce_persistent.c  osu_alltoall_persistent.c  osu_alltoallv_persistent.c  osu_alltoallw_persistent.c  osu_barrier_persistent.c  osu_bcast_persistent.c  osu_gather_persistent.c  osu_gatherv_persistent.c  osu_reduce_persistent.c  osu_reduce_scatter_persistent.c  osu_scatter_persistent.c  osu_scatterv_persistent.c
osu-micro-benchmarks-7.3/c/mpi/collective/persistent/.deps/: osu_allgather_persistent.Po  osu_allgatherv_persistent.Po  osu_allreduce_persistent.Po  osu_alltoall_persistent.Po  osu_alltoallv_persistent.Po  osu_alltoallw_persistent.Po  osu_barrier_persistent.Po  osu_bcast_persistent.Po  osu_gather_persistent.Po  osu_gatherv_persistent.Po  osu_reduce_persistent.Po  osu_reduce_scatter_persistent.Po  osu_scatter_persistent.Po  osu_scatterv_persistent.Po
osu-micro-benchmarks-7.3/c/mpi/one-sided/: Makefile  osu_acc_latency.c  osu_cas_latency.c  osu_fop_latency.c  osu_get_acc_latency.c  osu_get_bw.c  osu_get_latency.c  osu_put_bibw.c  osu_put_bw.c  osu_put_latency.c
osu-micro-benchmarks-7.3/c/mpi/one-sided/.deps/: osu_acc_latency.Po  osu_cas_latency.Po  osu_fop_latency.Po  osu_get_acc_latency.Po  osu_get_bw.Po  osu_get_latency.Po  osu_put_bibw.Po  osu_put_bw.Po  osu_put_latency.Po
osu-micro-benchmarks-7.3/c/mpi/pt2pt/: Makefile
osu-micro-benchmarks-7.3/c/mpi/pt2pt/persistent/: Makefile  osu_bibw_persistent.c  osu_bw_persistent.c  osu_latency_persistent.c
osu-micro-benchmarks-7.3/c/mpi/pt2pt/standard/: Makefile  osu_bibw.c  osu_bw.c  osu_latency.c  osu_latency_mp.c  osu_latency_mt.c  osu_mbw_mr.c  osu_multi_lat.c
osu-micro-benchmarks-7.3/c/mpi/startup/: Makefile  Makefile.am  Makefile.in  osu_init.c
osu-micro-benchmarks-7.3/c/mpi/startup/.deps/: osu_hello.Po  osu_init.Po
osu-micro-benchmarks-7.3/c/openshmem/: Makefile
osu-micro-benchmarks-7.3/c/upc/: Makefile
osu-micro-benchmarks-7.3/c/upcxx/: Makefile
osu-micro-benchmarks-7.3/c/util/: osu_util.c  osu_util.h  osu_util_mpi.c  osu_util_mpi.h  osu_util_options.h
osu-micro-benchmarks-7.3/c/util/.deps/: osu_util.Po  osu_util_graph.Po  osu_util_mpi.Po  osu_util_papi.Po  osu_util_validation.Po
osu-micro-benchmarks-7.3/c/xccl/: Makefile  Makefile.am  Makefile.in
osu-micro-benchmarks-7.3/c/xccl/collective/: Makefile  Makefile.am  Makefile.in  osu_xccl_allgather.c  osu_xccl_allreduce.c  osu_xccl_alltoall.c  osu_xccl_bcast.c  osu_xccl_reduce.c  osu_xccl_reduce_scatter.c
osu-micro-benchmarks-7.3/c/xccl/pt2pt/: Makefile  Makefile.am  Makefile.in  osu_xccl_bibw.c  osu_xccl_bw.c  osu_xccl_latency.c
osu-micro-benchmarks-7.3/c/xccl/util/: osu_util_xccl_interface.c  osu_util_xccl_interface.h
osu-micro-benchmarks-7.3/c/xccl/util/nccl/: osu_util_nccl_impl.c  osu_util_nccl_impl.h
osu-micro-benchmarks-7.3/c/xccl/util/rccl/: osu_util_rccl_impl.c  osu_util_rccl_impl.h
osu-micro-benchmarks-7.3/maint/: omb-format.pl
sim/: estimate_allgather_cost.py
ucc/src/components/tl/spin/: Makefile.am  configure.m4  tl_spin.c  tl_spin.h  tl_spin_allgather.c  tl_spin_allgather.h  tl_spin_bcast.c  tl_spin_bcast.h  tl_spin_bitmap.c  tl_spin_bitmap.h  tl_spin_coll.c  tl_spin_coll.h  tl_spin_context.c  tl_spin_lib.c  tl_spin_mcast.c  tl_spin_mcast.h  tl_spin_p2p.c  tl_spin_p2p.h  tl_spin_rbuf.c  tl_spin_rbuf.h  tl_spin_rcache.c  tl_spin_rcache.h  tl_spin_team.c  tl_spin_tsc.h
(+11 files in other folders)
